# Test4

./: .coderabbit.yaml  .gitignore  .htaccess  ARCHITECTURE.md  CACHE_FIX.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_PROJECT.md  DASHBOARD_TEST_GUIDE.md  DB保存確認方法.md  HANDOFF.md  MIGRATION_GUIDE.md  MIGRATION_PLAN.md  PLAN.md  PROFESSIONAL_DASHBOARD_README.md  PR_DESCRIPTION.md  README.md  VERIFICATION_REPORT.md  check-db.html  eslint.config.js  go.work  index.html  package-lock.json  package.json  plan-checklist.md  plan.md  serve.sh  shiire_arari_v10_multistore_flowview_ES5_20260216_022229_fixed_v23.html  shiire_arari_v8.html  test-database.html  test-sync.html  tsconfig.json  修正内容まとめ.md
.claude/: manifest.json
.claude/hooks/: session-start.sh  user-prompt-submit.sh
.claude/plans/: next-session-plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: aag-engine-archive-manifest-hardgate.yml  aag-engine.yml  ci.yml  deploy-worker.yml  deploy.yml
Shiire-Arari_Design_System_v2_1/: SKILL.md
Shiire-Arari_Design_System_v2_1/docs/: chart-semantic-colors.md  echarts-integration.md  iconography.md  route-b-guide.md  visual-foundations.md
aag/: CHANGELOG.md  README.md
aag-engine/: go.mod
aag/_framework/: README.md
aag/_internal/: README.md  architecture.md  display-rule-registry.md  evolution.md  layer-map.md  meta.md  operational-classification.md  source-of-truth.md  strategy.md
aag/core/: AAG_CORE_INDEX.md
aag/parameters/: aag-parameters.json  premise-contracts.json
app/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.observation.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
app-domain/gross-profit/: APP_DOMAIN_INDEX.md
apps/api/: Cargo.toml  openapi.yaml
apps/api/db/migrations/: 001_init.sql
apps/api/src/: main.rs
css/: dashboard.css  modernDashboard.css  professionalDashboard.css  spreadsheet.css  styles.css
docs/: architecture.md  calculation-engine.md  calculation-guide.md  development-guide.md  faq.md  file-import-guide.md  operations.md  requirements.md  security.md  ui-components.md
domain/: aggregate.js  aggregate.test.js  aggregate.ts
fixtures/: representative-dataset.json
js/: debugPanel.js  main.js
projects/: README.md
references/: AAG_CRITICAL_RULES.md  AAG_OVERVIEW.md  README.md  api.md  architecture-evolution-plan.md  budgetAnalysis-compare-plan.md  budgetAnalysis-engine-audit.md  calculation-engine.md  data-flow.md  data-models.md  design-principles.md  duckdb-architecture.md  engine-boundary-policy.md  engine-maturity-matrix.md  engine-promotion-matrix.md  engine-responsibility.md  explanation-architecture.md  extension-playbook.md  factorDecomposition-observation-log.md  faq.md  forecast-compare-plan.md  forecast-compare-readiness.md  forecast-engine-audit.md  forecast-rust-contract.md  grossProfit-engine-audit.md  grossProfit-ts-responsibility-map.md  guard-test-map.md  implementation-plan-constants-metrics.md  invariant-catalog.md  metric-id-registry.md  module-structure-evolution.md  observation-automation-plan.md  observation-evaluation-guide.md  open-issues.md  prohibition-quick-ref.md  promotion-criteria.md  record-store-architecture.md  rollback-policy.md  security.md  ui-components.md  (+2 more)
rust_engine/: Cargo.toml
scripts/: check-deps.js  compare-snapshot.ts  diff-dashboard.ts  generate-snapshot.ts  lint.mjs
snapshots/: diff-dashboard.md  expected-output.json
src/: legacy.ts  new-ts.ts  types.ts
state/: appState.js
tests/: csvParser.test.js  engine-compat.test.ts
tools/: aag-render-cli.ts  check-substantive-change.mjs  scaffold-guard.mjs
types/: node-shim.d.ts  state.d.ts
wasm/budget-analysis/: Cargo.toml
wasm/budget-analysis/src/: budget_analysis.rs  budget_analysis_tests.rs  gross_profit_budget.rs  lib.rs  types.rs  utils.rs
wasm/budget-analysis/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/core-utils/: Cargo.toml
wasm/core-utils/src/: aggregation.rs  lib.rs  moving_average.rs  ratios.rs
wasm/correlation/: Cargo.toml
wasm/correlation/src/: correlation.rs  lib.rs
wasm/correlation/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/customer-gap/: Cargo.toml
wasm/customer-gap/src/: customer_gap.rs  lib.rs
wasm/customer-gap/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/dow-gap/: Cargo.toml
wasm/dow-gap/src/: dow_gap.rs  lib.rs  statistics.rs
wasm/dow-gap/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/factor-decomposition/: Cargo.toml
wasm/factor-decomposition/src/: decompose.rs  lib.rs  price_mix.rs  types.rs  utils.rs
wasm/factor-decomposition/tests/: cross_validation.rs  edge_cases.rs  shapley_invariants.rs
wasm/moving-average/: Cargo.toml
wasm/moving-average/src/: lib.rs  moving_average.rs
wasm/moving-average/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/observation-period/: Cargo.toml
wasm/observation-period/src/: lib.rs  observation_period.rs
wasm/observation-period/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/pin-intervals/: Cargo.toml
wasm/pin-intervals/src/: lib.rs  pin_intervals.rs
wasm/pin-intervals/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/remaining-budget-rate/: Cargo.toml
wasm/remaining-budget-rate/src/: lib.rs  remaining_budget_rate.rs
wasm/remaining-budget-rate/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/sensitivity/: Cargo.toml
wasm/sensitivity/src/: lib.rs  sensitivity.rs  utils.rs
wasm/sensitivity/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
wasm/statistics/: Cargo.toml
wasm/statistics/src/: correlation.rs  dow_gap.rs  lib.rs  sensitivity.rs
wasm/time-slot/: Cargo.toml
wasm/time-slot/src/: core_time.rs  lib.rs  turnaround.rs
wasm/time-slot/tests/: invariants.rs
wasm/trend-analysis/: Cargo.toml
wasm/trend-analysis/src/: lib.rs  trend_analysis.rs
wasm/trend-analysis/tests/: cross_validation.rs  edge_cases.rs  invariants.rs
(+4311 files in other folders)
