[package]
name = "correlation-wasm"
version = "0.1.0"
edition = "2021"
description = "Correlation analysis, normalization, divergence detection, cosine similarity (WASM target)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.semantic]
class = "analytic"
authority = "candidate-authoritative"
owner = "migration"
contractId = "ANA-005"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
