[package]
name = "moving-average-wasm"
version = "0.1.0"
edition = "2021"
description = "Trailing moving average with missingness policy (WASM target)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.semantic]
class = "analytic"
authority = "candidate-authoritative"
owner = "migration"
contractId = "ANA-009"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
