[package]
name = "pin-intervals-wasm"
version = "0.1.0"
edition = "2021"
description = "Pin interval gross profit calculation for retail analysis (WASM target)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.semantic]
class = "business"
authority = "candidate-authoritative"
owner = "migration"
contractId = "BIZ-011"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
