[package]
name = "statistics-wasm"
version = "0.1.0"
edition = "2021"
description = "Statistical analysis functions for retail analytics (WASM target)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
