[package]
name = "time-slot-wasm"
version = "0.1.0"
edition = "2021"
description = "Time-slot analysis (core time, turnaround hour) for WASM target"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Disable binaryen optimization (not available in this environment)

[profile.release]
opt-level = "s"   # Optimize for size (small WASM binary)
lto = true
