[package]
name = "trend-analysis-wasm"
version = "0.1.0"
edition = "2021"
description = "Monthly trend analysis (MoM/YoY/MA/seasonal/trend) for retail analysis (WASM target)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.semantic]
class = "analytic"
authority = "candidate-authoritative"
owner = "migration"
contractId = "ANA-004"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
